namespace VehicleModel;

public enum EnergySource
{
    Gasoline,
    Diesel,
    Electric,
    Hydrogen,
    Unpowered
}

