namespace VehicleModel;

public enum RoadType 
{ 
    Highway, 
    City, 
    Offroad, 
    Backroad
}